--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "nasa-neo-api",
   "version": "1.0.0",
   "description": "Backend for NASA NEO data tool",
-  "main": "index.js",
+  "main": "dist/index.js",
   "scripts": {
+    "start": "tsc && node dist/index.js",
     "test": "npm test",
     "lint": "npx prettier --write . && npx eslint . --ext .js,.jsx,.ts,.tsx"
   },
@@ -17,5 +18,10 @@
     "eslint-plugin-prettier": "^3.3.1",
     "prettier": "^2.2.1",
     "typescript": "^4.1.3"
+  },
+  "dependencies": {
+    "apollo-datasource-rest": "^0.9.7",
+    "apollo-server": "^2.19.2",
+    "graphql": "^15.5.0"
   }
 }
