--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "test": "jest",
     "coverage": "jest --coverage",
     "lint": "npx prettier --write . && npx eslint . --ext .js,.jsx,.ts,.tsx",
-    "populate-top-diameter-by-month": "tsc && node dist/utils/fetch-top-diameters-by-month.js"
+    "populate-top-diameter-by-month": "tsc && node dist/utils/fetch-top-diameters-by-month.js",
+    "codegen": "graphql-codegen --config codegen.yml",
+    "postinstall": "npm run codegen"
   },
   "author": "Aleksi Lemmetyinen",
   "license": "ISC",
@@ -16,6 +18,7 @@
     "@babel/core": "^7.12.10",
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
+    "@graphql-codegen/cli": "1.20.1",
     "@types/jest": "^26.0.20",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
@@ -27,7 +30,9 @@
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "progress-bar": "^0.1.1",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "@graphql-codegen/typescript": "1.20.2",
+    "@graphql-codegen/typescript-resolvers": "1.18.1"
   },
   "dependencies": {
     "apollo-datasource-rest": "^0.9.7",
