--- a/package.json
+++ b/package.json
@@ -19,20 +19,22 @@
     "@babel/preset-env": "^7.12.11",
     "@babel/preset-typescript": "^7.12.7",
     "@graphql-codegen/cli": "1.20.1",
+    "@graphql-codegen/typescript": "1.20.2",
+    "@graphql-codegen/typescript-resolvers": "1.18.1",
     "@types/jest": "^26.0.20",
     "@typescript-eslint/eslint-plugin": "^4.14.1",
     "@typescript-eslint/parser": "^4.14.1",
     "apollo-server-testing": "^2.19.2",
     "babel-jest": "^26.6.3",
+    "date-fns": "^2.16.1",
+    "date-fns-tz": "^1.1.1",
     "eslint": "^7.18.0",
     "eslint-config-prettier": "^7.2.0",
     "eslint-plugin-prettier": "^3.3.1",
     "jest": "^26.6.3",
     "prettier": "^2.2.1",
     "progress-bar": "^0.1.1",
-    "typescript": "^4.1.3",
-    "@graphql-codegen/typescript": "1.20.2",
-    "@graphql-codegen/typescript-resolvers": "1.18.1"
+    "typescript": "^4.1.3"
   },
   "dependencies": {
     "apollo-datasource-rest": "^0.9.7",
