Remove comma from package.json

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "coverage": "jest --coverage",
     "lint": "npx prettier --write . && npx eslint . --ext .js,.jsx,.ts,.tsx",
     "populate-top-diameter-by-month": "tsc && node dist/utils/fetch-top-diameters-by-month.js",
-    "codegen": "graphql-codegen --config codegen.yml",
+    "codegen": "graphql-codegen --config codegen.yml"
   },
   "author": "Aleksi Lemmetyinen",
   "license": "ISC",
